# btc-analyst

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: run_pipeline.py
src/btc_analyst/: __init__.py  config.py  data.py  features.py  model.py  pipeline.py  reporting.py  strategy.py
tests/: test_features.py  test_strategy.py
